deployment/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: gh-backend
    app.kubernetes.io/name: gh-backend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/hook: Synce
  name: gh-backend
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gh-backend
      app.kubernetes.io/name: gh-backend
  serviceName: gh-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gh-backend
        app.kubernetes.io/name: gh-backend
    spec:
      containers:
        - image: vcscsvcscs/gheritage-backend-service:latest
          imagePullPolicy: Always
          name: gh-backend
          ports:
          - containerPort: 443
            name: gin
          securityContext:
            runAsUser: 0
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
            volumeMounts:
              - name: gh-backend-certs
                mountPath: /etc/gh-backend/ssl
      volumes:
      - name: gh-backend-certs
        secret:
          secretName: gh-backend-tls
