deployment/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: gh-backend
    app.kubernetes.io/name: gh-backend
  name: gh-backend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/hook: Synce
spec:
  ports:
  - name: gin
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/instance: gh-backend
    app.kubernetes.io/name: gh-backend
  type: ClusterIP
